# code-lora-finetuner

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  requirements.txt  run_pipeline.sh
config/: codefinetuner_config.yaml  language_block_definitions.json
docs/: config-file.md  inference-vscode.md  tree-sitter-customization.md
docs/finetuner_example/: finetuner-example.md  install-nvidia-l4-driver.md  training_log.json
scripts/: backup_finetuned.py  decode_dataset.py  decode_datasets.py  generate_from_model.py  merge_lora_adapter_and_save.py  plot_loss.py  save_base_hf_model.py  test_ast_parser.py  unzip_all_in_directory.py
src/: create_benchmark_dataset.py  evaluate_model.py  finetune_model.py  generate_from_model.py  preprocess_data.py
src/codefinetuner/evaluate/: config.py  generate.py
src/codefinetuner/finetune/: config.py  run.py  train.py
src/codefinetuner/preprocess/: config.py  extractor.py  processor.py  run.py
src/evaluate/: analyze.py  benchmark.py  codebleu_shim.py  config.py  evaluate.py  generate.py  metrics.py  run.py
src/finetune/: config.py  model.py  run.py  train.py
src/preprocess/: config.py  extractor.py  processor.py  run.py
tests/: test_finetune_model.py  test_preprocess_data.py
tests/test_data/: eval_dataset.jsonl  test.c  test_dataset.jsonl  train_dataset.jsonl
